Added authentication and authorization

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -15,7 +15,7 @@
             </div>
             <div class="mb-3">
                 <label for="Image URL" class="form-label">Image URL</label>
-                <input type="text" class="form-control" name="campground[Image URL]" id="Image URL" value="<%= campground.image%>" required>
+                <input type="text" class="form-control" name="campground[image]" id="image" value="<%= campground.image%>" required>
                 <div class="valid-feedback">Looks good</div>
             </div>
             <div class="mb-3">
