--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -11,26 +11,11 @@
 <body class="d-flex flex-column vh-100">
     <%- include("../partials/navbar") %> 
     <main class="container mt-5">
+       <%- include("../partials/flash") %> 
     <%- body %> 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-<script>
-    (function () {
-        'use strict';
-
-        const forms = document.querySelectorAll(".validated-form")
-        Array.from(forms)
-        .forEach(function(form){
-            form.addEventListener("submit", function(event){
-                if (!form.checkValidity()) {
-                    event.preventDefault()
-                    event.stopPropagation()
-                }
-                form.classList.add("was-validated")
-            }, false)
-        })
-    })()
-</script>
+<script src="/javascripts/validateForms.js"></script>
 </main>
 <%- include("../partials/footer") %> 
 </body>
