--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -9,13 +9,16 @@
                     <p class="card-text"><%= campground.description %></div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item text-muted"><%= campground.location %></li>
+                        <li class="list-group-item">Submitted by: <%= campground.author.username %></li>
                         <li class="list-group-item">$<%= campground.price%></li>
                     </ul>
                     <div class="card-body">
+                        <% if(currentUser && campground.author.equals(currentUser._id)) { %> 
                         <a class="card-link btn btn-info" href="/campgrounds/<%= campground._id%>/edit">Edit campground</a>
                         <a class="card-link btn btn-info" href="/campgrounds">All campgrounds</a>
                         <form class="d-inline card-link" action="/campgrounds/<%= campground.id %>?_method=DELETE" method="post">
                             <button class="btn btn-danger">Delete campground</button>
+                            <% } %> 
                         </form>
                         <div class="card-footer text-muted">
                             2 days ago
@@ -26,6 +29,7 @@
             
     </div>
     <div class="col-6">
+        <% if(currentUser) { %> 
         <h2>Leave a review</h2>
         <form action="/campgrounds/<%= campground._id %>/reviews" method="post" class="mb-3 validated-form" novalidate>
             <div class="mb-3">
@@ -39,16 +43,20 @@
             </div>
             <button class="btn btn-success">Submit</button>
         </form>
+        <% } %> 
         <div class="card mb-3">
             <% for (let review of campground.reviews) { %>
                 <div class="card-body mb-3">
                     <h5 class="card-title">Rating: <%= review.rating %></h5>
+                    <h6 class="card-subtitle mb-2 text-muted">By: <%= review.author.username %> </h6>
                     <p class="card-text">Review: <%= review.body %>
                     </p>
                 </div>
+                <% if(currentUser && review.author.equals(currentUser._id)) { %> 
                 <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="post">
                 <button class="btn btn-sm btn-danger">Delete</button>
                 </form>
+                <% } %>
             <% } %> 
         </div>
     </div>
