--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,6 +1,5 @@
 <% if (success && success.length) { %> 
 
-    
     <div class="alert alert-success alert-dismissible fade show" role="alert">
         <%= success %>
         <button class="btn-close" data-bs-dismiss="alert" arial-label="Close" type="button">
@@ -15,7 +14,7 @@
 
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
         <%= error %> 
-        <button class="close data-dismis-alert"arial-label=Close>
+        <button class="btn-close" data-bs-dismiss="alert" arial-label="Close" type="button">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
